@@ -27,6 +27,8 @@
 #include "GLES/glext.h"
 #include "Color.h"
 
+#define USE_BUFFERS 1
+
 GLAPI EGLBoolean APIENTRY eglSaveSurfaceHM(EGLSurface surface, const TCHAR * filename);
 
 #ifndef _WIN32_WCE
@@ -1222,6 +1224,13 @@ struct GLTXTLOAD{
 };
 
 
+#define VERTEX_BUFFER 0
+#define NORMAL_BUFFER 1
+#define TEXTURE_BUFFER 2
+
+
+GLuint buffers[3];
+
 void SetArrays(GLfixed vertexArray[][3], GLfixed normalArray[][3], GLfixed textureArray[][2]) {
 	int index = 0;
 
@@ -1257,6 +1266,18 @@ void SetArrays(GLfixed vertexArray[][3], GLfixed normalArray[][3], GLfixed textu
 			index++;
 		}
 	}
+
+#ifdef USE_BUFFERS
+
+	glGenBuffers(3, buffers);
+	glBindBuffer(GL_ARRAY_BUFFER, buffers[VERTEX_BUFFER]);
+	glBufferData(GL_ARRAY_BUFFER, index * sizeof(GLfixed) * 3, vertexArray, GL_STATIC_DRAW);
+	glBindBuffer(GL_ARRAY_BUFFER, buffers[NORMAL_BUFFER]);
+	glBufferData(GL_ARRAY_BUFFER, index * sizeof(GLfixed) * 3, normalArray, GL_STATIC_DRAW);
+	glBindBuffer(GL_ARRAY_BUFFER, buffers[TEXTURE_BUFFER]);
+	glBufferData(GL_ARRAY_BUFFER, index * sizeof(GLfixed) * 2, textureArray, GL_STATIC_DRAW);
+
+#endif
 }
 
 
@@ -1399,20 +1420,30 @@ extern "C" void PaintProc(HWND hWnd) {
 	glTexParameterx(GL_TEXTURE_2D, GL_TEXTURE_WRAP_S, GL_REPEAT);
 	glTexParameterx(GL_TEXTURE_2D, GL_TEXTURE_WRAP_T, GL_REPEAT);
 
-	// Test Code until we have full OpenGL pipeline
-	glVertexPointer(3, GL_FIXED, 0, egl_vertices);
 	glEnableClientState(GL_VERTEX_ARRAY);
-	glNormalPointer(GL_FIXED, 0, egl_normals);
 	glEnableClientState(GL_NORMAL_ARRAY);
-	glTexCoordPointer(2, GL_FIXED, 0, egl_textures);
 	glEnableClientState(GL_TEXTURE_COORD_ARRAY);
+
+	// Test Code until we have full OpenGL pipeline
+#ifdef USE_BUFFERS
+	glBindBuffer(GL_ARRAY_BUFFER, buffers[VERTEX_BUFFER]);
+	glVertexPointer(3, GL_FIXED, 0, 0);
+	glBindBuffer(GL_ARRAY_BUFFER, buffers[NORMAL_BUFFER]);
+	glNormalPointer(GL_FIXED, 0, 0);
+	glBindBuffer(GL_ARRAY_BUFFER, buffers[TEXTURE_BUFFER]);
+	glTexCoordPointer(2, GL_FIXED, 0, 0);
+#else
+	glVertexPointer(3, GL_FIXED, 0, egl_vertices);
+	glNormalPointer(GL_FIXED, 0, egl_normals);
+	glTexCoordPointer(2, GL_FIXED, 0, egl_textures);
+#endif
 
 
 	//glScissor(30, 30, 100, 100);
 	//glEnable(GL_SCISSOR_TEST);
 	glColorMask(GL_TRUE, GL_TRUE, GL_TRUE, GL_FALSE);
-	glDrawArrays(GL_LINE_STRIP, 0, SIZE);
-//	glDrawArrays(GL_TRIANGLES, 0, SIZE);
+	//glDrawArrays(GL_LINE_STRIP, 0, SIZE);
+	glDrawArrays(GL_TRIANGLES, 0, SIZE);
 
 	glFinish();
 	eglWaitGL();
